--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -5,4 +5,15 @@ html,body,h1{
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
+  font-family: system-ui;
+}
+section{
+  min-height: 100vh;
+  
+}
+p{
+  font-size: 19px;
+}
+h1{
+  font-size: 25px;
 }
